// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle default exported es module functions 1`] = `
"declare class Action {}
declare class RouterState {}
declare export default function routerReducer(
  state?: RouterState,
  action?: Action
): RouterState;
"
`;

exports[`should handle exported es module functions 1`] = `
"declare class Action {}
declare class RouterState {}
declare class Store<T> {}
declare class SyncHistoryWithStoreOptions {}
declare class HistoryUnsubscribe {}
declare export function routerReducer(
  state?: RouterState,
  action?: Action
): RouterState;
declare export function syncHistoryWithStore(
  history: History,
  store: Store<any>,
  options?: SyncHistoryWithStoreOptions
): History & HistoryUnsubscribe;
"
`;

exports[`should handle function overload es module functions 1`] = `
"declare class Action {}
declare class RouterState {}
declare export function routerReducer(
  state?: RouterState,
  action?: Action
): RouterState;
declare export function routerReducer(state?: RouterState): RouterState;
"
`;

exports[`should handle toString function overload 1`] = `
"declare export function toString(): void;
declare export function toString(e: number): void;
declare export function toString(b: string): void;
"
`;

exports[`should remove default parameters from functions 1`] = `
"declare function addClickListener<T>(onclick: (e: Event) => void): T;
"
`;

exports[`should remove this annotation from functions 1`] = `
"declare function addClickListener(onclick: (e: Event) => void): void;
"
`;
